# aviation

./: .pre-commit-config.yaml  .pylintrc  README.md  main.ipynb  pyproject.toml
data/: prepared_data_from_contributors.csv
notebooks/: training_linear_regression_model.ipynb
